--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -5,7 +5,7 @@
   <groupId>myproject</groupId>
   <artifactId>demo</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>demo</name>
   <url>http://maven.apache.org</url>
@@ -21,9 +21,9 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+  </dependencies>  
   
-<distributionManagement>
+  <distributionManagement>
 
 <snapshotRepository>
 <id>snapshots</id>
