--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -9,6 +9,10 @@
 
   <name>demo</name>
   <url>http://maven.apache.org</url>
+  
+  <build>
+      <finalName>${project.name}##${project.version}.${BUILD_NUMBER}</finalName>
+  </build>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
