--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -11,7 +11,7 @@
   <url>http://maven.apache.org</url>
   
   <build>
-      <finalName>${project.name}##${project.version}.${BUILD_NUMBER}</finalName>
+      <finalName>${project.name}.${project.version}.${BUILD_NUMBER}</finalName>
   </build>
 
   <properties>
